# statusnotifier

./: .gitignore  HISTORY  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  statusnotifier.pc.in
docs/reference/: Makefile.am  statusnotifier-docs.xml  statusnotifier-sections.txt  statusnotifier.types
example/: Makefile.am  sn-example.c
src/: enums.c.template  enums.h.template  interfaces.h  mkenums  statusnotifier-compat.h  statusnotifier.c  statusnotifier.h
